# lesta-course

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  lines.cxx  readme.md
.github/workflows/: ubuntu-build.yml
01-homework/: CMakeLists.txt  readme.txt
01-homework/01-1-hello-world/: CMakeLists.txt  main.cxx
01-homework/01-2-lib/: CMakeLists.txt
01-homework/01-2-lib/hello_bin/: CMakeLists.txt
01-homework/01-2-lib/hello_bin/src/: main.cxx
01-homework/01-2-lib/hello_lib/: CMakeLists.txt
01-homework/01-2-lib/hello_lib/include/: hello_lib.hxx
01-homework/01-2-lib/hello_lib/src/: hello_lib.cxx
01-homework/01-2-lib/include/: hello.hpp
01-homework/01-2-lib/src/: hello.cpp
02-homework/: CMakeLists.txt  readme.md
02-homework/sdl/: CMakeLists.txt
02-homework/sdl-shared/: CMakeLists.txt  shared.cxx
02-homework/sdl-static/: CMakeLists.txt
02-homework/sdl/sdl_shared_lib/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackProjectConfig.cmake  CPackSourceConfig.cmake  SDL3Config.cmake  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  libSDL3.so.0.0.0  sdl3.pc
02-homework/sdl/sdl_shared_lib/docs/man/man3/: SDL_AddGamepadMappingsFromRW.3  SDL_AddHintCallback.3  SDL_AndroidGetExternalStoragePath.3  SDL_AndroidGetExternalStorageState.3  SDL_AndroidGetJNIEnv.3  SDL_AndroidSendMessage.3  SDL_AndroidShowToast.3  SDL_AtomicAdd.3  SDL_AtomicCAS.3  SDL_AtomicGet.3  SDL_AtomicTryLock.3  SDL_AttachVirtualJoystickEx.3  SDL_BlitSurfaceScaled.3  SDL_CaptureMouse.3  SDL_ClearError.3  SDL_ClearQueuedAudio.3  SDL_CloseJoystick.3  SDL_CloseSensor.3  SDL_CondBroadcast.3  SDL_CondWait.3  SDL_ConvertAudioSamples.3  SDL_ConvertSurface.3  SDL_ConvertSurfaceFormat.3  SDL_CreateAudioStream.3  SDL_CreateCond.3  SDL_CreateCursor.3  SDL_CreateMutex.3  SDL_CreatePixelFormat.3  SDL_CreatePopupWindow.3  SDL_CreateRW.3  SDL_CreateSemaphore.3  SDL_CreateShapedWindow.3  SDL_CreateSoftwareRenderer.3  SDL_CreateSurfaceFrom.3  SDL_CreateSystemCursor.3  SDL_CreateTextureFromSurface.3  SDL_CreateThreadWithStackSize.3  SDL_DelHintCallback.3  SDL_Delay.3  SDL_DelayNS.3  (+316 more)
02-homework/sdl/sdl_shared_lib/docs/wiki/: SDL_AddEventWatch.md  SDL_AddHintCallback.md  SDL_AddTimer.md  SDL_AndroidBackButton.md  SDL_AndroidGetExternalStoragePath.md  SDL_AndroidGetExternalStorageState.md  SDL_AndroidGetInternalStoragePath.md  SDL_AndroidRequestPermission.md  SDL_AndroidShowToast.md  SDL_AtomicAdd.md  SDL_AtomicCAS.md  SDL_AtomicGet.md  SDL_AtomicLock.md  SDL_AtomicSetPtr.md  SDL_AtomicUnlock.md  SDL_BlitSurface.md  SDL_CaptureMouse.md  SDL_ClearError.md  SDL_ClearQueuedAudio.md  SDL_CondBroadcast.md  SDL_CondSignal.md  SDL_CondWait.md  SDL_ConvertSurface.md  SDL_CreateColorCursor.md  SDL_CreateSoftwareRenderer.md  SDL_CreateTexture.md  SDL_CreateThread.md  SDL_CreateWindow.md  SDL_DelEventWatch.md  SDL_DelHintCallback.md  SDL_Delay.md  SDL_DequeueAudio.md  SDL_DestroyCond.md  SDL_DestroyRenderer.md  SDL_DestroyWindow.md  SDL_DetachThread.md  SDL_Direct3D9GetAdapterIndex.md  SDL_FlushEvent.md  SDL_FlushEvents.md  SDL_GL_BindTexture.md  (+152 more)
02-homework/sdl/sdl_shared_lib/include/SDL3/: SDL_revision.h
02-homework/sdl/sdl_static_lib/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackProjectConfig.cmake  CPackSourceConfig.cmake  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3staticTargets.cmake  SDL3testTargets.cmake  SDL_build_config.h.intermediate  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  sdl3.pc
02-homework/sdl/sdl_static_lib/docs/man/man3/: SDL_AddEventWatch.3  SDL_AddGamepadMapping.3  SDL_AddTimer.3  SDL_AndroidBackButton.3  SDL_AndroidGetActivity.3  SDL_AndroidGetInternalStoragePath.3  SDL_AndroidRequestPermission.3  SDL_AtomicCASPtr.3  SDL_AtomicGetPtr.3  SDL_AtomicLock.3  SDL_AtomicSet.3  SDL_AtomicSetPtr.3  SDL_AtomicUnlock.3  SDL_AttachVirtualJoystick.3  SDL_BlitSurface.3  SDL_BlitSurfaceUnchecked.3  SDL_BlitSurfaceUncheckedScaled.3  SDL_ClearAudioStream.3  SDL_ClearComposition.3  SDL_ClearHints.3  SDL_CloseAudioDevice.3  SDL_CloseGamepad.3  SDL_ComposeCustomBlendMode.3  SDL_CondSignal.3  SDL_CondWaitTimeout.3  SDL_ConvertEventToRenderCoordinates.3  SDL_ConvertPixels.3  SDL_CreateColorCursor.3  SDL_CreatePalette.3  SDL_CreateRenderer.3  SDL_CreateSurface.3  SDL_CreateTexture.3  SDL_CreateThread.3  SDL_CreateWindow.3  SDL_CreateWindowAndRenderer.3  SDL_CreateWindowFrom.3  SDL_CreateWindowWithPosition.3  SDL_CursorVisible.3  SDL_DXGIGetOutputInfo.3  SDL_DelEventWatch.3  (+312 more)
02-homework/sdl/sdl_static_lib/docs/wiki/: SDL_AndroidGetActivity.md  SDL_AndroidGetJNIEnv.md  SDL_AndroidSendMessage.md  SDL_AtomicCASPtr.md  SDL_AtomicGetPtr.md  SDL_AtomicSet.md  SDL_AtomicTryLock.md  SDL_ClearHints.md  SDL_CloseAudioDevice.md  SDL_ComposeCustomBlendMode.md  SDL_CondWaitTimeout.md  SDL_ConvertPixels.md  SDL_ConvertSurfaceFormat.md  SDL_CreateCond.md  SDL_CreateCursor.md  SDL_CreateMutex.md  SDL_CreateRenderer.md  SDL_CreateSemaphore.md  SDL_CreateSystemCursor.md  SDL_CreateTextureFromSurface.md  SDL_CreateWindowAndRenderer.md  SDL_CreateWindowFrom.md  SDL_DXGIGetOutputInfo.md  SDL_DestroyMutex.md  SDL_DestroySemaphore.md  SDL_DestroyTexture.md  SDL_DisableScreenSaver.md  SDL_EnableScreenSaver.md  SDL_FilterEvents.md  SDL_FlashWindow.md  SDL_GL_CreateContext.md  SDL_GL_DeleteContext.md  SDL_GL_ExtensionSupported.md  SDL_GL_GetCurrentContext.md  SDL_GL_GetProcAddress.md  SDL_GL_GetSwapInterval.md  SDL_GL_ResetAttributes.md  SDL_GL_SetSwapInterval.md  SDL_GL_SwapWindow.md  SDL_GetAndroidSDKVersion.md  (+146 more)
02-homework/shared/: CMakeLists.txt  shared_main.cxx
02-homework/static/: CMakeLists.txt  static_main.cxx
03-homework/: CMakeLists.txt  readme.md
03-homework/engine-to-game/: CMakeLists.txt  engine.cxx
03-homework/virtual-console/: CMakeLists.txt  console.cxx  main.cxx
03-homework/virtual-console-to-engine/: CMakeLists.txt  engine.hxx  main.cxx
image/: lines.ppm
